Fix growth section on mobile devices

--- a/_assets/src/less/powershop.base.less
+++ b/_assets/src/less/powershop.base.less
@@ -1589,6 +1589,12 @@ a {
 
 	h2 {
 		color: @cream;
+
+		em {
+			font-style: normal;
+			font-size: 0.5em;
+			vertical-align: super;
+		}
 	}
 
 	strong {
